<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:background="@drawable/top_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or_sign_up_to_continue"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/log_in"
                android:backgroundTint="#083257"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/btnSignUp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:backgroundTint="#083257"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
