<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/log_in_to_access_your_account"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />


        <LinearLayout
            android:id="@+id/llForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/labelEmail"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-5dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:labelFor="@+id/etEmail"
                android:autofillHints="johndoe@gmail.com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/labelPassword"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-3dp"
                android:textColor="@android:color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/etSetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:labelFor="@+id/etSetPassword"
                    android:textColor="@android:color/black"
                    android:autofillHints=""/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/password"
                    android:src="@drawable/ic_eye"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#083257"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
